Cascading Change Log

2.6.1 [unreleased]

  Fixed issue where c.t.h.i.TapOutputCollector did not honor the current task o.a.h.m.Reporter instance on the
  cluster side. This should improve the accuracy of Hadoop counters wrapped by c.t.h.PartitionTap.

  Updated c.t.Tuple#isUnmodifiable to be transient to prevent the value from being serialized and restored resulting in
  an unmodifiable Tuple from a data source.

  Updated c.s.h.HadoopStepStats to reduce memory pressure when fetching TaskReports and TaskCompletionEvents from
  Hadoop 2.x.

  Updated c.p.h.HadoopPlatform to set 'mapreduce.jobtracker.staging.root.dir' to a fully qualified path for non-cluster
  tests.

  Fixed issue where c.u.Version was leaking file descriptors.

  Fixed issue where c.t.h.Hfs would not properly ignore 'hidden' files starting with '.' or '_' when listing children
  in a directory.

2.6.0

  Updated c.p.a.AggregateBy and c.p.a.Unique to count cache flushes, hits, and misses. Previously only AggregateBy
  tracked cache flushes.

  Updated slf4j to 1.7.5.

  Added ability to customize trace data captured for debugging purposes.

  Added CONTRIBUTING.md.

  Updated c.t.h.DistCacheTap to support simple file globing as provided by c.t.h.Hfs.

  Fixed issue where c.p.a.UniqueBy was not honoring the c.t.Hasher interface.

  Added c.t.h.DistCacheTap a decorator for a c.t.h.Hfs instance that uses o.a.h.f.DistributedCache to read files
  transparently from local disk. This is useful for c.p.HashJoins.

  Added c.t.DecoratorTap class to simplify wrapping a given c.t.Tap instance with additional meta-data.

  Updated c.f.p.FlowPlanner to allow both intermediate temporary c.t.Tap or any c.p.Checkpoint tap to be decorated
  by a configured c.t.DecoratorTap class via new c.f.FlowConnectorProps properties.

  Fixed issue where c.p.a.AggregateBy was not honoring the c.t.Hasher interface.
