@@ -134,13 +134,14 @@ public abstract class FlowStepJob<Config> implements Callable<Throwable>
         {
         markSkipped();
 
-        if( flowStep.isInfoEnabled() )
+        if( flowStep.isInfoEnabled() && flowStepStats.isSkipped() )
           flowStep.logInfo( "skipping step: " + stepName );
 
         return;
         }
 
-      flowStepStats.markStarted();
+      if( !markStarted() )
+        return;
 
       blockOnPredecessors();
 
@@ -159,6 +160,16 @@ public abstract class FlowStepJob<Config> implements Callable<Throwable>
       latch.countDown();
       flowStepStats.cleanup();
       }
+    }
+
+  private synchronized boolean markStarted()
+    {
+    if( flowStepStats.isFinished() ) // if stopped, return
+      return false;
+
+    flowStepStats.markStarted();
+
+    return true;
     }
 
   private void applyFlowStepConfStrategy()
@@ -310,6 +321,9 @@ public abstract class FlowStepJob<Config> implements Callable<Throwable>
 
   private synchronized void markSkipped()
     {
+    if( flowStepStats.isFinished() )
+      return;
+
     flowStepStats.markSkipped();
 
     markFlowRunning();
